src/main/java/kstates/KstatesParser.java
// Generated from kstates/Kstates.g4 by ANTLR 4.13.1
package kstates;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KstatesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STATEMACHINE=1, ATTACHED=2, TO=3, STATES=4, STATE=5, INITIAL=6, ENTRY=7, 
		DO=8, SET=9, APPEND=10, EVENT=11, MACRO=12, EVAL=13, TRANSITIONS=14, TRANSITION=15, 
		NOT=16, LOOPING=17, CONDITION=18, VALUE=19, MACROS=20, TAKES=21, RETURNS=22, 
		DEFINITION=23, REFERENCE=24, ARROW=25, LBRACE=26, RBRACE=27, LPAREN=28, 
		RPAREN=29, COMMA=30, STRING=31, SSTRING=32, IDENT=33, NUMBER=34, WS=35, 
		LINE_COMMENT=36, SYMBOL=37;
	public static final int
		RULE_kstates_file = 0, RULE_statemachine = 1, RULE_states_block = 2, RULE_state_definition = 3, 
		RULE_entry_block = 4, RULE_do_block = 5, RULE_action_block = 6, RULE_action_rule = 7, 
		RULE_action_operation = 8, RULE_action_right_side = 9, RULE_macro_call = 10, 
		RULE_eval_statement = 11, RULE_transitions_block = 12, RULE_transition_definition = 13, 
		RULE_not_looping = 14, RULE_condition_block = 15, RULE_transition_condition = 16, 
		RULE_event_condition = 17, RULE_value_condition = 18, RULE_macros_block = 19, 
		RULE_macro_definition = 20, RULE_takes_directive = 21, RULE_returns_directive = 22, 
		RULE_return_expression = 23, RULE_type_expression = 24, RULE_typed_call_expression = 25, 
		RULE_reference_expression = 26, RULE_definition_block = 27, RULE_eval_code_block = 28, 
		RULE_code_content = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"kstates_file", "statemachine", "states_block", "state_definition", "entry_block", 
			"do_block", "action_block", "action_rule", "action_operation", "action_right_side", 
			"macro_call", "eval_statement", "transitions_block", "transition_definition", 
			"not_looping", "condition_block", "transition_condition", "event_condition", 
			"value_condition", "macros_block", "macro_definition", "takes_directive", 
			"returns_directive", "return_expression", "type_expression", "typed_call_expression", 
			"reference_expression", "definition_block", "eval_code_block", "code_content"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'STATEMACHINE'", "'ATTACHED'", "'TO'", "'STATES'", "'STATE'", 
			"'INITIAL'", "'ENTRY'", "'DO'", "'SET'", "'APPEND'", "'EVENT'", "'MACRO'", 
			"'EVAL'", "'TRANSITIONS'", "'TRANSITION'", "'NOT'", "'LOOPING'", "'CONDITION'", 
			"'VALUE'", "'MACROS'", "'TAKES'", "'RETURNS'", "'DEFINITION'", "'reference'", 
			"'->'", "'{'", "'}'", "'('", "')'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STATEMACHINE", "ATTACHED", "TO", "STATES", "STATE", "INITIAL", 
			"ENTRY", "DO", "SET", "APPEND", "EVENT", "MACRO", "EVAL", "TRANSITIONS", 
			"TRANSITION", "NOT", "LOOPING", "CONDITION", "VALUE", "MACROS", "TAKES", 
			"RETURNS", "DEFINITION", "REFERENCE", "ARROW", "LBRACE", "RBRACE", "LPAREN", 
			"RPAREN", "COMMA", "STRING", "SSTRING", "IDENT", "NUMBER", "WS", "LINE_COMMENT", 
			"SYMBOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kstates.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KstatesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Kstates_fileContext extends ParserRuleContext {
		public StatemachineContext statemachine() {
			return getRuleContext(StatemachineContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KstatesParser.EOF, 0); }
		public Kstates_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kstates_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitKstates_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Kstates_fileContext kstates_file() throws RecognitionException {
		Kstates_fileContext _localctx = new Kstates_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kstates_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			statemachine();
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatemachineContext extends ParserRuleContext {
		public TerminalNode STATEMACHINE() { return getToken(KstatesParser.STATEMACHINE, 0); }
		public TerminalNode ATTACHED() { return getToken(KstatesParser.ATTACHED, 0); }
		public TerminalNode TO() { return getToken(KstatesParser.TO, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public States_blockContext states_block() {
			return getRuleContext(States_blockContext.class,0);
		}
		public Transitions_blockContext transitions_block() {
			return getRuleContext(Transitions_blockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public Macros_blockContext macros_block() {
			return getRuleContext(Macros_blockContext.class,0);
		}
		public StatemachineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statemachine; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitStatemachine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatemachineContext statemachine() throws RecognitionException {
		StatemachineContext _localctx = new StatemachineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statemachine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(STATEMACHINE);
			setState(64);
			match(ATTACHED);
			setState(65);
			match(TO);
			setState(66);
			match(STRING);
			setState(67);
			match(LBRACE);
			setState(68);
			states_block();
			setState(69);
			transitions_block();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MACROS) {
				{
				setState(70);
				macros_block();
				}
			}

			setState(73);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class States_blockContext extends ParserRuleContext {
		public TerminalNode STATES() { return getToken(KstatesParser.STATES, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public List<State_definitionContext> state_definition() {
			return getRuleContexts(State_definitionContext.class);
		}
		public State_definitionContext state_definition(int i) {
			return getRuleContext(State_definitionContext.class,i);
		}
		public States_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_states_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitStates_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final States_blockContext states_block() throws RecognitionException {
		States_blockContext _localctx = new States_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_states_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(STATES);
			setState(76);
			match(LBRACE);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATE || _la==INITIAL) {
				{
				{
				setState(77);
				state_definition();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class State_definitionContext extends ParserRuleContext {
		public TerminalNode STATE() { return getToken(KstatesParser.STATE, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public TerminalNode INITIAL() { return getToken(KstatesParser.INITIAL, 0); }
		public Entry_blockContext entry_block() {
			return getRuleContext(Entry_blockContext.class,0);
		}
		public Do_blockContext do_block() {
			return getRuleContext(Do_blockContext.class,0);
		}
		public List<State_definitionContext> state_definition() {
			return getRuleContexts(State_definitionContext.class);
		}
		public State_definitionContext state_definition(int i) {
			return getRuleContext(State_definitionContext.class,i);
		}
		public State_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitState_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final State_definitionContext state_definition() throws RecognitionException {
		State_definitionContext _localctx = new State_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_state_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIAL) {
				{
				setState(85);
				match(INITIAL);
				}
			}

			setState(88);
			match(STATE);
			setState(89);
			match(STRING);
			setState(90);
			match(LBRACE);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENTRY) {
				{
				setState(91);
				entry_block();
				}
			}

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(94);
				do_block();
				}
			}

			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STATE || _la==INITIAL) {
				{
				{
				setState(97);
				state_definition();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entry_blockContext extends ParserRuleContext {
		public TerminalNode ENTRY() { return getToken(KstatesParser.ENTRY, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public Entry_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitEntry_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entry_blockContext entry_block() throws RecognitionException {
		Entry_blockContext _localctx = new Entry_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entry_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(ENTRY);
			setState(106);
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Do_blockContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(KstatesParser.DO, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public Do_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_do_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitDo_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Do_blockContext do_block() throws RecognitionException {
		Do_blockContext _localctx = new Do_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_do_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(DO);
			setState(109);
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_blockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public List<Action_ruleContext> action_rule() {
			return getRuleContexts(Action_ruleContext.class);
		}
		public Action_ruleContext action_rule(int i) {
			return getRuleContext(Action_ruleContext.class,i);
		}
		public Action_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_blockContext action_block() throws RecognitionException {
		Action_blockContext _localctx = new Action_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(LBRACE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3584L) != 0)) {
				{
				{
				setState(112);
				action_rule();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_ruleContext extends ParserRuleContext {
		public Action_operationContext action_operation() {
			return getRuleContext(Action_operationContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(KstatesParser.LPAREN, 0); }
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public TerminalNode COMMA() { return getToken(KstatesParser.COMMA, 0); }
		public Action_right_sideContext action_right_side() {
			return getRuleContext(Action_right_sideContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(KstatesParser.RPAREN, 0); }
		public Action_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_rule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_ruleContext action_rule() throws RecognitionException {
		Action_ruleContext _localctx = new Action_ruleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_action_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			action_operation();
			setState(121);
			match(LPAREN);
			setState(122);
			match(STRING);
			setState(123);
			match(COMMA);
			setState(124);
			action_right_side();
			setState(125);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_operationContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(KstatesParser.SET, 0); }
		public TerminalNode APPEND() { return getToken(KstatesParser.APPEND, 0); }
		public TerminalNode EVENT() { return getToken(KstatesParser.EVENT, 0); }
		public Action_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_operation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_operationContext action_operation() throws RecognitionException {
		Action_operationContext _localctx = new Action_operationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_action_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3584L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Action_right_sideContext extends ParserRuleContext {
		public Macro_callContext macro_call() {
			return getRuleContext(Macro_callContext.class,0);
		}
		public Eval_statementContext eval_statement() {
			return getRuleContext(Eval_statementContext.class,0);
		}
		public TerminalNode STRING() { return getToken(KstatesParser.STRING, 0); }
		public Action_right_sideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_right_side; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitAction_right_side(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_right_sideContext action_right_side() throws RecognitionException {
		Action_right_sideContext _localctx = new Action_right_sideContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action_right_side);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MACRO:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				macro_call();
				}
				break;
			case EVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				eval_statement();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Macro_callContext extends ParserRuleContext {
		public TerminalNode MACRO() { return getToken(KstatesParser.MACRO, 0); }
		public TerminalNode LPAREN() { return getToken(KstatesParser.LPAREN, 0); }
		public List<TerminalNode> STRING() { return getTokens(KstatesParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(KstatesParser.STRING, i);
		}
		public TerminalNode RPAREN() { return getToken(KstatesParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(KstatesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KstatesParser.COMMA, i);
		}
		public Macro_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_call; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitMacro_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_callContext macro_call() throws RecognitionException {
		Macro_callContext _localctx = new Macro_callContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_macro_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(MACRO);
			setState(135);
			match(LPAREN);
			setState(136);
			match(STRING);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(137);
				match(COMMA);
				setState(138);
				match(STRING);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Eval_statementContext extends ParserRuleContext {
		public TerminalNode EVAL() { return getToken(KstatesParser.EVAL, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public Eval_code_blockContext eval_code_block() {
			return getRuleContext(Eval_code_blockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public Eval_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitEval_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Eval_statementContext eval_statement() throws RecognitionException {
		Eval_statementContext _localctx = new Eval_statementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_eval_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(EVAL);
			setState(147);
			match(LBRACE);
			setState(148);
			eval_code_block();
			setState(149);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Transitions_blockContext extends ParserRuleContext {
		public TerminalNode TRANSITIONS() { return getToken(KstatesParser.TRANSITIONS, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public List<Transition_definitionContext> transition_definition() {
			return getRuleContexts(Transition_definitionContext.class);
		}
		public Transition_definitionContext transition_definition(int i) {
			return getRuleContext(Transition_definitionContext.class,i);
		}
		public Transitions_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transitions_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitTransitions_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Transitions_blockContext transitions_block() throws RecognitionException {
		Transitions_blockContext _localctx = new Transitions_blockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_transitions_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(TRANSITIONS);
			setState(152);
			match(LBRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TRANSITION) {
				{
				{
				setState(153);
				transition_definition();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Transition_definitionContext extends ParserRuleContext {
		public TerminalNode TRANSITION() { return getToken(KstatesParser.TRANSITION, 0); }
		public List<TerminalNode> STRING() { return getTokens(KstatesParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(KstatesParser.STRING, i);
		}
		public TerminalNode ARROW() { return getToken(KstatesParser.ARROW, 0); }
		public TerminalNode LBRACE() { return getToken(KstatesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(KstatesParser.RBRACE, 0); }
		public Not_loopingContext not_looping() {
			return getRuleContext(Not_loopingContext.class,0);
		}
		public Condition_blockContext condition_block() {
			return getRuleContext(Condition_blockContext.class,0);
		}
		public Transition_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KstatesVisitor ) return ((KstatesVisitor<? extends T>)visitor).visitTransition_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Transition_definitionContext transition_definition() throws RecognitionException {
		Transition_definitionContext _localctx = new Transition_definitionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_transition_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(TRANSITION);
			setState(162);
			match(STRING);
			setState(163);
			match(ARROW);
			setState(164);
			match(STRING);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NOT) {
				{
				setState(165);
				not_looping();
				}
			}
